-----XX.XX.XX () -----
New features:
	* [worksheet]
		* Add possibility to use column labels as axis ticks

-----2.10.1 () -----
Bug fixes:
	* Improve Vector BLF dependency (git download must be enabled if needed)
-----2.10.0 (21.03.2023) -----
New features:
	* [worksheet]
		* Bar plots
		* Plot templates - allow to save and re-use custom plot configurations
		* Histogram
			* Error bars (Possion sqrt(N) error or values from custom columns)
			* Rug plots
		* Box Plot
			* Rug plots
			* Symbols for whisker end points
			* Allow to modify box properties (color, etc.) for every data set independently of each other
			* Draw a legend item for every dataset in the box plot
		* Reference Range - custom area on the plot to highlight a certain x- or y-range
		* Show LaTeX error messages in text labels when rendering with LaTeX
	* [spreadsheet]
		* Use a different icon for calculated columns, also show the definition of the formula and parameters in the tooltip text in the project explorer
		* Heatmap formatting for categorical data in text columns
		* When generating random numbers, allow to specify the seed number
		* Column statistics for text columns including the frequency table, bar and Pareto plots
		* Column statistics for selected cells only
		* Dropping and masking of values also for text and datetime columns
		* Data sampling (random and periodic methods)
		* Data 'flattening' - convert pivoted data to column base format
		* Column statistics (size, mean, stddev, etc.) are available in the function dialog
		* Function values dialog supports accessing arbitrary cells of columns with cell(f(index), g(column,..)) and other moving functions
		* Allow to subtract and add a value by providing a difference between two values
		* Allow to subtract a baseline
	* [matrix]
		* Zooming in the image view
	* [import]
		* Import data from Excel .xlsx files using QXlsx library
		* Import of Binary Log File (BLF) files from Vektor Informatik
		* HDF5: support VLEN data import