@@ -10,6 +10,11 @@
 # SPDX-FileCopyrightText: 2018 Sune Vuorela <sune@kde.org>
 # SPDX-License-Identifier: BSD-3-Clause
 
+find_package(PkgConfig QUIET)
+pkg_check_modules(PC_LIBMARKDOWN libmarkdown QUIET)
+
+set(Discount_VERSION ${PC_LIBMARKDOWN_VERSION})
+
 if (Discount_INCLUDE_DIR AND Discount_LIBRARIES)
 
   # Already in cache
@@ -19,10 +24,12 @@ else (Discount_INCLUDE_DIR AND Discount_LIBRARIES)
 
   find_library (Discount_LIBRARIES
     NAMES markdown libmarkdown
+    HINTS ${PC_LIBMARKDOWN_LIBRARY_DIRS}
   )
 
   find_path (Discount_INCLUDE_DIR
     NAMES mkdio.h
+    HINTS ${PC_LIBMARKDOWN_INCLUDE_DIRS}
   )
 
   include (FindPackageHandleStandardArgs)
@@ -30,7 +37,7 @@ else (Discount_INCLUDE_DIR AND Discount_LIBRARIES)
 
 endif (Discount_INCLUDE_DIR AND Discount_LIBRARIES)
 
-mark_as_advanced(Discount_INCLUDE_DIR Discount_LIBRARIES)
+mark_as_advanced(Discount_INCLUDE_DIR Discount_LIBRARIES Discount_VERSION)
 
 if (Discount_FOUND)
    add_library(Discount::Lib UNKNOWN IMPORTED)
